# deviceshop1

./: data.json  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  models.py  urls.py  views.py
shop/management/commands/: fill.py
shop/migrations/: 0001_initial.py  0002_brand_remove_category_slug_remove_product_slug_and_more.py  0003_alter_brand_options.py  0004_product_views_counter.py  0005_product_description_full.py
shop/templates/: base.html  catalog.html  headsets.html  keyboards.html  mousepads.html  mouses.html  product_detail.html  product_list.html
shop/templates/includes/: inc_menu.html
shop/templates/shop/: base.html  category_menu.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
shop/templates/shop/includes/: inc_category_menu.html  inc_menu.html  product_list_category.html
shop/templatetags/: my_tags.py
static/css/: bootstrap.min.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/templates/users/: login.html  password_reset.html  profile.html  register.html  user_form.html
