[tool.poetry]
name = "deviceshop"
version = "0.1.0"
description = ""
authors = ["serejawell <sev2316@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
